client/src/index.module.css
/* width */
::-webkit-scrollbar {
  width: 5px;
}
  
  /* Track */
::-webkit-scrollbar-track {
background-color: grey;
}
  
  /* Handle */
::-webkit-scrollbar-thumb {
  background: #FFD7EA;
  border-radius: 10px;
}

a {
  color: #FF7596;
}

